Update for Thulite

--- a/src/content/docs/basics/commands.mdx
+++ b/src/content/docs/basics/commands.mdx
@@ -12,7 +12,7 @@ You can use the `scripts` in `package.json` to create new content and develop, f
 
 The following scripts for the most common commands (`create`, `dev`, `format`, `build`, and `preview`) are added for you automatically when you create a project using [the `create hyas` wizard](/install/auto/#1-run-the-setup-wizard).
 
-When you follow the instructions to [install Hyas manually](/install/manual/#2-install-hyas-prettier-and-vite), you are instructed to add these scripts yourself. You can also add more scripts to this list manually for any commands you use frequently.
+When you follow the instructions to [install Thulite manually](/install/manual/#2-install-hyas-prettier-and-vite), you are instructed to add these scripts yourself. You can also add more scripts to this list manually for any commands you use frequently.
 
 ```json title="package.json"
 {
