--- a/src/content/docs/basics/layouts.mdx
+++ b/src/content/docs/basics/layouts.mdx
@@ -6,11 +6,11 @@ sidebar:
 ---
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-__Layouts__ are files that live in the `layouts` directory of your Hyas project. They are used to provide a reusable UI structure, such as a page template.
+__Layouts__ are files that live in the `layouts` directory of your Thulite project. They are used to provide a reusable UI structure, such as a page template.
 
 ## Examples
 
-For example, the default Hyas [base template](https://gohugo.io/templates/base/#define-the-base-template) looks like this:
+For example, the default Thulite [base template](https://gohugo.io/templates/base/#define-the-base-template) looks like this:
 
 ```html title="baseof.html"
 <!doctype html>
@@ -30,7 +30,7 @@ For example, the default Hyas [base template](https://gohugo.io/templates/base/#
 
 ## Hugo documentation
 
-Hyas leverages Hugo's [templates](https://gohugo.io/templates/). Here are some relevant topics:
+Thulite leverages Hugo's [templates](https://gohugo.io/templates/). Here are some relevant topics:
 
 <CardGrid>
   <LinkCard
