--- a/src/content/docs/basics/menus.mdx
+++ b/src/content/docs/basics/menus.mdx
@@ -33,7 +33,7 @@ For example, to define entries for the main menu:
 
 ## Hugo documentation
 
-Hyas leverages Hugo's [menus](https://gohugo.io/content-management/menus/). Here are some relevant topics:
+Thulite leverages Hugo's [menus](https://gohugo.io/content-management/menus/). Here are some relevant topics:
 
 <CardGrid>
   <LinkCard
