--- a/src/content/docs/editor-setup.mdx
+++ b/src/content/docs/editor-setup.mdx
@@ -4,13 +4,13 @@ description: A reference page in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-Customize your code editor to improve the Hyas developer experience and unlock new features.
+Customize your code editor to improve the Thulite developer experience and unlock new features.
 
 ## VS Code
 
 [VS Code](https://code.visualstudio.com/) is a popular code editor for web developers, built by Microsoft. The VS Code engine also powers popular in-browser code editors like [GitHub Codespaces](https://github.com/features/codespaces) and [Gitpod](https://gitpod.io/).
 
-Hyas works with any code editor. However, VS Code is our recommended editor for Hyas projects together with the following extensions:
+Thulite works with any code editor. However, VS Code is our recommended editor for Thulite projects together with the following extensions:
 
 - [Hugo Language and Syntax Support](https://marketplace.visualstudio.com/items?itemName=budparr.language-hugo-vscode)
 - [Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)
@@ -21,21 +21,21 @@ Hyas works with any code editor. However, VS Code is our recommended editor for 
 
 ## In-Browser Editors
 
-In addition to local editors, Hyas also runs well on in-browser hosted editors, including:
+In addition to local editors, Thulite also runs well on in-browser hosted editors, including:
 
 - [GitHub.dev](https://github.dev/) — available to everyone for free on GitHub.com.
 - [Gitpod](https://gitpod.io/) — isolated cloud development environments with your favorite editor.
+- [CodeSandbox](https://codesandbox.io/) — 24/7 collaborative cloud development environments (CDEs) that resume in 2 seconds.
 
 ### Not yet supported
 
 - [StackBlitz](https://stackblitz.com/) — write, run, and debug frontend code directly in your browser.
-- [CodeSandbox](https://codesandbox.io/) — 24/7 collaborative cloud development environments (CDEs) that resume in 2 seconds.
 
 ## Other tools
 
 ### Prettier
 
-[Prettier](https://prettier.io/) is a popular formatter for JavaScript, HTML, CSS, and more. Hyas includes Prettier and a `format` command that runs `prettier **/** -w -c`. You can customize the Hyas defaults for Prettier by updating the `.prettierrc.yaml` and `.prettierignore` files in your project root.
+[Prettier](https://prettier.io/) is a popular formatter for JavaScript, HTML, CSS, and more. Thulite includes Prettier and a `format` command that runs `prettier **/** -w -c`. You can customize the Thulite defaults for Prettier by updating the `.prettierrc.yaml` and `.prettierignore` files in your project root.
 
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
