--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -1,17 +1,17 @@
 ---
 title: Getting Started
-description: This guide will help you get started with a new Hyas project.
+description: This guide will help you get started with a new Thulite project.
 tableOfContents: true
 ---
 import Button from '~/components/Button.astro'
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-[Hyas](https://gethyas.com/) is a web framework designed for speed, security, and SEO — all powered by Hugo and npm. Here you'll find guides, resources, and references to help you build with Hyas.
+[Thulite](https://thulite.io/) is a web framework designed for speed, security, and SEO — all powered by Hugo and npm. Here you'll find guides, resources, and references to help you build with Thulite.
 
 ## Quick Start
 
-Get a new Hyas project up and running locally with our helpful `create-hyas` CLI wizard!
+Get a new Thulite project up and running locally with our helpful `create-hyas` CLI wizard!
 
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
@@ -31,12 +31,12 @@ yarn create hyas
   </TabItem>
 </Tabs>
 
-Our [Installation Guide](/install/auto/) has step-by-step instructions for installing Hyas using our CLI wizard, creating a new project from an existing Hyas GitHub repository, and for installing Hyas manually.
+Our [Installation Guide](/install/auto/) has step-by-step instructions for installing Thulite using our CLI wizard, creating a new project from an existing Thulite GitHub repository, and for installing Thulite manually.
 
 {/*
 ## Quick Try
 
-Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of templates to get started. Play around with a full, working version of Hyas right in your browser!
+Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of templates to get started. Play around with a full, working version of Thulite right in your browser!
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
   <Button href="https://gitpod.io/#https://github.com/gethyas/basic-starter">Launch basic template</Button>
@@ -47,13 +47,13 @@ Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of t
 ## Quick Links
 
 <CardGrid>
-  <Card title="Learn Hyas" icon="open-book">
-    - [Main features](/concepts/why-hyas/)
+  <Card title="Learn Thulite" icon="open-book">
+    - [Main features](/concepts/why-thulite/)
     - [Project structure](/basics/project-structure/)
     - [Configuration](/basics/configuration/)
     - [Commands](/basics/commands/)
   </Card>
-  <Card title="Extend Hyas" icon="puzzle">
+  <Card title="Extend Thulite" icon="puzzle">
     - [Themes](/guides/themes/)
     - [Integrations](/guides/integrations/)
     - [Analytics](/guides/analytics/)
@@ -62,7 +62,7 @@ Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of t
   <Card title="What's going on?" icon="information">
     - [Roadmap 2024](https://github.com/orgs/gethyas/discussions/462)
     - [Discussions](https://github.com/orgs/gethyas/discussions)
-    - [Blog](https://gethyas.com/blog/)
+    - [Blog](https://thulite.io/blog/)
   </Card>
   <Card title="Other docs" icon="document">
     - [Doks](https://getdoks.org/)
