--- a/src/content/docs/guides/analytics.mdx
+++ b/src/content/docs/guides/analytics.mdx
@@ -1,10 +1,10 @@
 ---
-title: Add Analytics to Hyas
+title: Add Analytics to Thulite
 description: A guide in my new Starlight docs site.
 ---
 import AnalyticsGuidesNav from '~/components/AnalyticsGuidesNav.astro';
 
-**Ready to add Analytics to your Hyas project?** Follow one of our guides to different analytics services or scroll down for general guidance about adding analytics to a Hyas site.
+**Ready to add Analytics to your Thulite project?** Follow one of our guides to different analytics services or scroll down for general guidance about adding analytics to a Thulite site.
 
 ## Analytics Guides
 
