--- a/src/content/docs/guides/analytics/google-analytics.mdx
+++ b/src/content/docs/guides/analytics/google-analytics.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Add Google Analytics to your Hyas Site"
-description: How to add ananlytics to your Hyas site using Google Analytics.
+title: "Add Google Analytics to your Thulite Site"
+description: How to add ananlytics to your Thulite site using Google Analytics.
 type: analytics
 stub: false
 service: Google Analytics
