--- a/src/content/docs/guides/cms/tina-cms.mdx
+++ b/src/content/docs/guides/cms/tina-cms.mdx
@@ -1,6 +1,6 @@
 ---
-title: Tina CMS & Hyas
-description: Add content to your Hyas project using Tina as a CMS
+title: Tina CMS & Thulite
+description: Add content to your Thulite project using Tina as a CMS
 type: cms
 stub: false
 service: Tina CMS
@@ -10,11 +10,11 @@ import List from '~/components/List.astro';
 
 [Tina CMS](https://tina.io/) is a Git-backed headless content management system.
 
-## Integrating with Hyas
+## Integrating with Thulite
 
-To get started, you'll need an existing Hyas project.
+To get started, you'll need an existing Thulite project.
 
-1. Run the following command to install Tina into your Hyas project.
+1. Run the following command to install Tina into your Thulite project.
 
     <Tabs>
       <TabItem label="npm">
