--- a/src/content/docs/guides/deploy/cloudflare.mdx
+++ b/src/content/docs/guides/deploy/cloudflare.mdx
@@ -1,13 +1,13 @@
 ---
-title: Deploy your Hyas Site to Cloudflare Pages
-description: How to deploy your Hyas site to the web using Cloudflare Pages.
+title: Deploy your Thulite Site to Cloudflare Pages
+description: How to deploy your Thulite site to the web using Cloudflare Pages.
 type: deploy
 stub: false
 service: Cloudflare Pages
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-You can deploy your Hyas project on [Cloudflare Pages](https://pages.cloudflare.com/), a JAMstack platform for frontend developers to collaborate and deploy websites.
+You can deploy your Thulite project on [Cloudflare Pages](https://pages.cloudflare.com/), a JAMstack platform for frontend developers to collaborate and deploy websites.
 
 This guide includes:
 
@@ -94,7 +94,7 @@ After your assets are uploaded, Wrangler will give you a preview URL to inspect 
 
 ### Enabling Preview locally with Wrangler
 
-Update the preview script to run `wrangler` instead of Hyas' built-in preview command:
+Update the preview script to run `wrangler` instead of Thulite' built-in preview command:
 
 ```json title="package.json"
 "preview": "wrangler pages dev ./public"
