--- a/src/content/docs/guides/deploy/gitlab.mdx
+++ b/src/content/docs/guides/deploy/gitlab.mdx
@@ -1,12 +1,12 @@
 ---
-title: Deploy your Hyas Site to GitLab Pages
-description: How to deploy your Hyas site to the web using GitLab Pages.
+title: Deploy your Thulite Site to GitLab Pages
+description: How to deploy your Thulite site to the web using GitLab Pages.
 type: deploy
 stub: false
 service: GitLab Pages
 ---
 
-You can use [GitLab Pages](https://pages.gitlab.io/) to host a Hyas site for your [GitLab](https://about.gitlab.com/) projects, groups, or user account.
+You can use [GitLab Pages](https://pages.gitlab.io/) to host a Thulite site for your [GitLab](https://about.gitlab.com/) projects, groups, or user account.
 
 :::tip[Looking for an example?]
 Check out the [GitLab Pages Doks example project](https://gitlab.com/h-enk/doks-gitlab-pages)!
@@ -14,7 +14,7 @@ Check out the [GitLab Pages Doks example project](https://gitlab.com/h-enk/doks-
 
 ## How to deploy
 
-Follow the instructions below to deploy your Hyas site to GitLab pages.
+Follow the instructions below to deploy your Thulite site to GitLab pages.
 
 1. Create a file called `.gitlab-ci.yml` in the root of your project with the content below. This will build and deploy your site whenever you make changes to your content:
 
