--- a/src/content/docs/guides/integrations/bootstrap.mdx
+++ b/src/content/docs/guides/integrations/bootstrap.mdx
@@ -1,6 +1,6 @@
 ---
 title: "@hyas/bootstrap"
-description: Bootstrap integration for Hyas
+description: Bootstrap integration for Thulite
 editUrl: https://github.com/gethyas/bootstrap/blob/main/README.md
 type: integration
 stub: false
@@ -9,9 +9,9 @@ category: renderer
 ---
 import { LinkCard } from '@astrojs/starlight/components';
 
-This [Hyas integration](/add-ons/integrations/) adds
+This [Thulite integration](/add-ons/integrations/) adds
 
-Official Bootstrap integration for Hyas.
+Official Bootstrap integration for Thulite.
 
 ## Status
 
