--- a/src/content/docs/guides/integrations/core.mdx
+++ b/src/content/docs/guides/integrations/core.mdx
@@ -1,15 +1,15 @@
 ---
 title: "@hyas/core"
-description: Core integration for Hyas
+description: Core integration for Thulite
 type: integration
 stub: false
 service: "@hyas/core"
 category: other
 ---
 
-# Hyas core
+# Thulite core
 
-Official core integration for Hyas.
+Official core integration for Thulite.
 
 ## Official Resources
 
