--- a/src/content/docs/guides/integrations/images.mdx
+++ b/src/content/docs/guides/integrations/images.mdx
@@ -1,6 +1,6 @@
 ---
 title: "@hyas/images"
-description: Official Images integration for Hyas
+description: Official Images integration for Thulite
 type: integration
 stub: false
 service: "@hyas/images"
@@ -8,7 +8,7 @@ category: other
 ---
 import List from '~/components/List.astro';
 
-[Images](https://images.gethyas.com/) is the official Images integration for the Hyas framework.
+[Images](https://images.gethyas.com/) is the official Images integration for the Thulite framework.
 
 ## Official Resources
 
