--- a/src/content/docs/guides/integrations/inline-svg.mdx
+++ b/src/content/docs/guides/integrations/inline-svg.mdx
@@ -1,6 +1,6 @@
 ---
 title: "@hyas/inline-svg"
-description: Official Inline SVG integration for Hyas
+description: Official Inline SVG integration for Thulite
 type: integration
 stub: false
 service: "@hyas/inline-svg"
@@ -8,7 +8,7 @@ category: other
 ---
 import List from '~/components/List.astro';
 
-[Inline SVG](https://svg.gethyas.com/) is the official Inline SVG integration for the Hyas framework.
+[Inline SVG](https://svg.gethyas.com/) is the official Inline SVG integration for the Thulite framework.
 
 ## Official Resources
 
