--- a/src/content/docs/guides/integrations/seo.mdx
+++ b/src/content/docs/guides/integrations/seo.mdx
@@ -1,6 +1,6 @@
 ---
 title: "@hyas/seo"
-description: Official SEO integration for Hyas
+description: Official SEO integration for Thulite
 type: integration
 stub: false
 service: "@hyas/seo"
@@ -8,7 +8,7 @@ category: other
 ---
 import List from '~/components/List.astro';
 
-[SEO](https://seo.gethyas.com/) is the official SEO integration for the Hyas framework.
+[SEO](https://seo.gethyas.com/) is the official SEO integration for the Thulite framework.
 
 ## Official Resources
 
