--- a/src/content/docs/guides/integrations/tailwind.mdx
+++ b/src/content/docs/guides/integrations/tailwind.mdx
@@ -1,12 +1,12 @@
 ---
 title: "@hyas/tailwindcss"
-description: Tailwind CSS integration for Hyas
+description: Tailwind CSS integration for Thulite
 type: integration
 stub: false
 service: "@hyas/tailwindcss"
 category: renderer
 ---
 
-Tailwind CSS integration for Hyas.
+Tailwind CSS integration for Thulite.
 
 [..]
