--- a/src/content/docs/guides/themes.mdx
+++ b/src/content/docs/guides/themes.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add a theme to  Hyas
+title: Add a theme to  Thulite
 description: A guide in my new Starlight docs site.
 ---
 import ThemesGuidesNav from '~/components/ThemesGuidesNav.astro';
