--- a/src/content/docs/guides/themes/doks.mdx
+++ b/src/content/docs/guides/themes/doks.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Doks"
-description: Doks theme guide for Hyas
+description: Doks theme guide for Thulite
 type: themes
 stub: false
 service: Doks
