--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Learn, troubleshoot, and explore Hyas
+title: Learn, troubleshoot, and explore Thulite
 description: The all-in-one Hugo-npm framework. Fast, flexible, and easy-to-use.
 template: splash
 hero:
