--- a/src/content/docs/install/auto.mdx
+++ b/src/content/docs/install/auto.mdx
@@ -1,13 +1,13 @@
 ---
-title: Install Hyas with the Automatic CLI
+title: Install Thulite with the Automatic CLI
 description: A reference page in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-Ready to install Hyas? Follow this guide to using the `create hyas` CLI to get started.
+Ready to install Thulite? Follow this guide to using the `create hyas` CLI to get started.
 
-:::note[Prefer to install Hyas manually?]
+:::note[Prefer to install Thulite manually?]
 Read our [step-by-step manual installation guide](/install/manual/) instead.
 :::
 
@@ -16,14 +16,14 @@ Read our [step-by-step manual installation guide](/install/manual/) instead.
 - __Node.js__ - `v20.11.0` or higher — run `node -v` to check.
 - __Hugo extended__ - `v0.125.0` or higher — run `hugo version` to check.
 - __Text editor__ - We recommend [VS Code](https://code.visualstudio.com/) — see also [Editor Setup](/editor-setup/).
-- __Terminal__ - Hyas is accessed through its command-line interface (CLI).
+- __Terminal__ - Thulite is accessed through its command-line interface (CLI).
 
 ## Installation
 
-`create-hyas` is the fastest way to start a new Hyas project from scratch. It will walk you through every step of setting up your new Hyas project. It allows you to choose from a few different official starter templates. Or, you can [use any existing project on GitHub with the `degit` command](http://localhost:4321/install/auto/#community).
+`create-hyas` is the fastest way to start a new Thulite project from scratch. It will walk you through every step of setting up your new Thulite project. It allows you to choose from a few different official starter templates. Or, you can [use any existing project on GitHub with the `degit` command](http://localhost:4321/install/auto/#community).
 
 :::tip[Online previews]
-Prefer to try Hyas in your browser? Visit [new.gethyas.com](https://new.gethyas.com/) to browse our starter templates and spin up a new Hyas project without ever leaving your browser.
+Prefer to try Thulite in your browser? Visit [new.gethyas.com](https://new.gethyas.com/) to browse our starter templates and spin up a new Thulite project without ever leaving your browser.
 :::
 
 ### 1. Run the Setup Wizard
@@ -74,9 +74,9 @@ yarn install
   </TabItem>
 </Tabs>
 
-### 3. Start Hyas ✨
+### 3. Start Thulite ✨
 
-Hyas uses the Hugo development server that has everything you need for project development. The `dev` command will start the local development server so that you can see your new website in action for the very first time.
+Thulite uses the Hugo development server that has everything you need for project development. The `dev` command will start the local development server so that you can see your new website in action for the very first time.
 
 Use your favorite package manager to run this command and start the Hugo development server.
 
@@ -98,7 +98,7 @@ yarn run dev
   </TabItem>
 </Tabs>
 
-If all goes well, Hyas should now be serving your project on [http://localhost:1313](http://localhost:1313/)!
+If all goes well, Thulite should now be serving your project on [http://localhost:1313](http://localhost:1313/)!
 
 The Hugo server will listen for live file changes in your project directory, so you will not need to restart the server as you make changes during development.
 
@@ -106,7 +106,7 @@ If you aren't able to open your project in the browser, go back to the terminal 
 
 ## Starter Templates
 
-You can also start a new Hyas project based on an [official example](https://github.com/gethyas/create-hyas#templates) by passing a `--template` argument to the `create hyas` command. Or, by using a tool like [degit](https://github.com/Rich-Harris/degit) to scaffold your project with the `main` branch of any GitHub repository.
+You can also start a new Thulite project based on an [official example](https://github.com/gethyas/create-hyas#templates) by passing a `--template` argument to the `create hyas` command. Or, by using a tool like [degit](https://github.com/Rich-Harris/degit) to scaffold your project with the `main` branch of any GitHub repository.
 
 ### Official
 
@@ -141,42 +141,42 @@ Create a new project based on a GitHub repository's main branch
   <TabItem label="npm">
 ```bash
 # Syntax: npx degit <user/repo> [project-directory]
-npx degit h-enk/simply-cyan my-hyas-project
+npx degit h-enk/simply-cyan my-thulite-project
 ```
   </TabItem>
   <TabItem label="pnpm">
 ```bash
 # Syntax: pnpm dlx degit <user/repo> [project-directory]
-pnpm dlx degit h-enk/simply-cyan my-hyas-project
+pnpm dlx degit h-enk/simply-cyan my-thulite-project
 ```
   </TabItem>
   <TabItem label="Yarn">
 ```bash
 # Syntax: yarn dlx degit <user/repo> [project-directory]
-yarn dlx degit h-enk/simply-cyan my-hyas-project
+yarn dlx degit h-enk/simply-cyan my-thulite-project
 ```
   </TabItem>
 </Tabs>
 
-Explore our [themes and starters showcase](https://gethyas.com/themes/) where you can browse themes for blogs, portfolios, documentation, landing pages, and more! Or, [search on GitHub](https://github.com/search?o=desc&q=hyas+starter&s=stars&type=repositories) for even more starter projects.
+Explore our [themes and starters showcase](https://thulite.io/themes/) where you can browse themes for blogs, portfolios, documentation, landing pages, and more! Or, [search on GitHub](https://github.com/search?o=desc&q=hyas+starter&s=stars&type=repositories) for even more starter projects.
 
 ## Next Steps
 
-Success! You are now ready to start building with Hyas! 🥳
+Success! You are now ready to start building with Thulite! 🥳
 
-Here are a few topics that we recommend exploring next. You can read them in any order. You can even leave our documentation for a bit and go play in your new Hyas project codebase, coming back here whenever you run into trouble or have a question.
+Here are a few topics that we recommend exploring next. You can read them in any order. You can even leave our documentation for a bit and go play in your new Thulite project codebase, coming back here whenever you run into trouble or have a question.
 
 <CardGrid>
   <LinkCard
     title="Understand your codebase"
-    description="Learn more about Hyas' file structure in our Project Structure guide."
+    description="Learn more about Thulite' file structure in our Project Structure guide."
     href="/basics/project-structure/" />
   <LinkCard
     title="Add a framework"
-    description="Extend Hyas with support for Bootstrap, Tailwind CSS, and more in our Integrations guide."
+    description="Extend Thulite with support for Bootstrap, Tailwind CSS, and more in our Integrations guide."
     href="/guides/integrations/" />
   <LinkCard
     title="Deploy your site"
-    description="Learn how to build and deploy a Hyas project to the web in our Deployment guide."
+    description="Learn how to build and deploy a Thulite project to the web in our Deployment guide."
     href="/guides/deploy/" />
 </CardGrid>
