--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -6,16 +6,16 @@ sidebar:
 ---
 import FileTree from '~/components/FileTree.astro';
 
-Your new Hyas project generated from the `create hyas` CLI wizard already includes some files and folders. Others, you will create yourself and add to Hyas' existing file structure.
+Your new Thulite project generated from the `create hyas` CLI wizard already includes some files and folders. Others, you will create yourself and add to Thulite' existing file structure.
 
-Here's how a Hyas project is organized, and some files you will find in your new project.
+Here's how a Thulite project is organized, and some files you will find in your new project.
 
 ## Directories and Files
 
-Hyas leverages the Hugo [directory structure](https://gohugo.io/getting-started/directory-structure/) for your project. Every Hyas project root should include the following directories and files:
+Thulite leverages the Hugo [directory structure](https://gohugo.io/getting-started/directory-structure/) for your project. Every Thulite project root should include the following directories and files:
 
 - `assets` - Your project assets (scripts, styles, images, etc.)
-- `config` - Your project's configuration files (Hyas, Hugo, PostCSS, etc.)
+- `config` - Your project's configuration files (Thulite, Hugo, PostCSS, etc.)
 - `content` - Your project content (pages, posts, etc.)
 - `layouts` - Your project layouts (partials, shortcodes, etc.)
 - `static` - Your non-code, unprocessed assets (fonts, icons, etc.)
@@ -23,7 +23,7 @@ Hyas leverages the Hugo [directory structure](https://gohugo.io/getting-started/
 
 ## Example Project Tree
 
-A common Hyas project directory might look like this:
+A common Thulite project directory might look like this:
 
 <FileTree>
 
@@ -50,17 +50,17 @@ A common Hyas project directory might look like this:
 
 ### `assets/scss`
 
-It is a common convention to store your CSS or Sass files in a `assets/scss` directory, but this is not required. As long as your styles live somewhere in the `assets/` directory and are imported correctly, Hyas will handle and optimize them.
+It is a common convention to store your CSS or Sass files in a `assets/scss` directory, but this is not required. As long as your styles live somewhere in the `assets/` directory and are imported correctly, Thulite will handle and optimize them.
 
 The `app.scss` file is used to specify the CSS or Sass files to import (or use). Put your custom (S)CSS variables in `common/variables-custom` and custom (S)CSS code in `common/_custom.scss`.
 
 ### `config/_default/`
 
-The `hugo.toml` file includes [Hugo configuration](https://gohugo.io/getting-started/configuration/) options for your Hyas project. Here you can specify taxonomies to use, build options, server options, and more.
+The `hugo.toml` file includes [Hugo configuration](https://gohugo.io/getting-started/configuration/) options for your Thulite project. Here you can specify taxonomies to use, build options, server options, and more.
 
-The `module.toml` file specifies the [Hugo mounts](https://gohugo.io/hugo-modules/configuration/#module-configuration-mounts), logically linking `node_modules` directories to component folders (ex: `assets`, `layouts`) — making Hyas Integrations available in your Hyas project.
+The `module.toml` file specifies the [Hugo mounts](https://gohugo.io/hugo-modules/configuration/#module-configuration-mounts), logically linking `node_modules` directories to component folders (ex: `assets`, `layouts`) — making Thulite Integrations available in your Thulite project.
 
-The `params.toml` file is where you set [Hyas configuration](/reference/configuration/) options like e.g. options for themes and integrations. 
+The `params.toml` file is where you set [Thulite configuration](/reference/configuration/) options like e.g. options for themes and integrations. 
 
 ### `content/`
 
@@ -68,11 +68,11 @@ The `content/` directory is where you store [pages](/basics/pages/), organized i
 
 ### `layouts/`
 
-[Layouts](/basics/layouts/) are Hyas templates that define the UI structure shared by one or more pages.
+[Layouts](/basics/layouts/) are Thulite templates that define the UI structure shared by one or more pages.
 
 ### `static/`
 
-The `static/` directory is for files and assets that do not need to be processed during Hyas' build process. These files will be copied into the build folder untouched.
+The `static/` directory is for files and assets that do not need to be processed during Thulite' build process. These files will be copied into the build folder untouched.
 
 This behavior makes `static/` ideal for common assets like images and fonts, or special files such as `robots.txt` and `manifest.webmanifest`.
 
@@ -85,8 +85,8 @@ As a general rule, any CSS or JavaScript that you write yourself should live in 
 
 ### `package.json`
 
-This is a file used by JavaScript package managers to manage your dependencies. It also defines the scripts that are commonly used to run Hyas (ex: `npm run dev`, `npm run build`).
+This is a file used by JavaScript package managers to manage your dependencies. It also defines the scripts that are commonly used to run Thulite (ex: `npm run dev`, `npm run build`).
 
-There are [two kinds of dependencies](https://docs.npmjs.com/specifying-dependencies-and-devdependencies-in-a-package-json-file) you can specify in a `package.json`: `dependencies` and `devDependencies`. In most cases, these work the same: Hyas needs all dependencies at build time, and your package manager will install both. We recommend putting all of your dependencies in `dependencies` to start, and only use `devDependencies` if you find a specific need to do so.
+There are [two kinds of dependencies](https://docs.npmjs.com/specifying-dependencies-and-devdependencies-in-a-package-json-file) you can specify in a `package.json`: `dependencies` and `devDependencies`. In most cases, these work the same: Thulite needs all dependencies at build time, and your package manager will install both. We recommend putting all of your dependencies in `dependencies` to start, and only use `devDependencies` if you find a specific need to do so.
 
 For help creating a new `package.json` file for your project, check out the [manual setup](/install/manual/) instructions.
