--- a/src/content/docs/guides/analytics/cabin-analytics.mdx
+++ b/src/content/docs/guides/analytics/cabin-analytics.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Add Cabin Analytics to your Hyas Site"
-description: How to add ananlytics to your Hyas site using Cabin Analytics.
+title: "Add Cabin Analytics to your Thulite Site"
+description: How to add ananlytics to your Thulite site using Cabin Analytics.
 type: analytics
 stub: false
 service: Cabin
@@ -11,7 +11,7 @@ import List from '~/components/List.astro';
 
 ## Set up Cabin
 
-To follow this guide, you'll need an existing [Hyas](https://gethyas.com/) site and a [Cabin](https://withcabin.com/settings/domains) project.
+To follow this guide, you'll need an existing [Thulite](https://thulite.io/) site and a [Cabin](https://withcabin.com/settings/domains) project.
 
 ### Add script
 
