--- a/src/content/docs/guides/analytics/fathom-analytics.mdx
+++ b/src/content/docs/guides/analytics/fathom-analytics.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Add Fathom Analytics to your Hyas Site"
-description: How to add ananlytics to your Hyas site using Fathom Analytics.
+title: "Add Fathom Analytics to your Thulite Site"
+description: How to add ananlytics to your Thulite site using Fathom Analytics.
 type: analytics
 stub: false
 service: Fathom
@@ -11,7 +11,7 @@ import List from '~/components/List.astro';
 
 ## Set up Fathom
 
-To follow this guide, you'll need an existing [Hyas](https://gethyas.com/) site and a [Fathom](https://usefathom.com/docs/start/create) project.
+To follow this guide, you'll need an existing [Thulite](https://thulite.io/) site and a [Fathom](https://usefathom.com/docs/start/create) project.
 
 ### Add script
 
