--- a/src/content/docs/guides/analytics/plausible-analytics.mdx
+++ b/src/content/docs/guides/analytics/plausible-analytics.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Add Plausible Analytics to your Hyas Site"
-description: How to add ananlytics to your Hyas site using Plausible Analytics.
+title: "Add Plausible Analytics to your Thulite Site"
+description: How to add ananlytics to your Thulite site using Plausible Analytics.
 type: analytics
 stub: false
 service: Plausible
@@ -11,7 +11,7 @@ import List from '~/components/List.astro';
 
 ## Set up Plausible
 
-To follow this guide, you'll need an existing [Hyas](https://gethyas.com/) site and a [Plausible](https://plausible.io/) project.
+To follow this guide, you'll need an existing [Thulite](https://thulite.io/) site and a [Plausible](https://plausible.io/) project.
 
 ### Add parameters
 
