--- a/src/content/docs/guides/cms/cloudcannon.mdx
+++ b/src/content/docs/guides/cms/cloudcannon.mdx
@@ -1,6 +1,6 @@
 ---
-title: CloudCannon & Hyas
-description: Add content to your Hyas project using CloudCannon as a CMS
+title: CloudCannon & Thulite
+description: Add content to your Thulite project using CloudCannon as a CMS
 type: cms
 stub: false
 service: CloudCannon
