--- a/src/content/docs/guides/cms/decap-cms.mdx
+++ b/src/content/docs/guides/cms/decap-cms.mdx
@@ -1,6 +1,6 @@
 ---
-title: Decap CMS & Hyas
-description: Add content to your Hyas project using Decap as a CMS
+title: Decap CMS & Thulite
+description: Add content to your Thulite project using Decap as a CMS
 type: cms
 stub: true
 service: Decap CMS
