--- a/src/content/docs/guides/deploy/google-firebase.mdx
+++ b/src/content/docs/guides/deploy/google-firebase.mdx
@@ -1,13 +1,13 @@
 ---
-title: Deploy your Hyas Site to Google's Firebase Hosting
-description: How to deploy your Hyas site to the web using Google's Firebase Hosting.
+title: Deploy your Thulite Site to Google's Firebase Hosting
+description: How to deploy your Thulite site to the web using Google's Firebase Hosting.
 type: deploy
 stub: false
 service: Firebase Hosting
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-[Firebase Hosting](https://firebase.google.com/products/hosting) is a service provided by Google's [Firebase](https://firebase.google.com/) app development platform, which can be used to deploy a Hyas site. 
+[Firebase Hosting](https://firebase.google.com/products/hosting) is a service provided by Google's [Firebase](https://firebase.google.com/) app development platform, which can be used to deploy a Thulite site. 
 
 ## Prerequisites
 
