--- a/src/content/docs/guides/deploy/microsoft-azure.mdx
+++ b/src/content/docs/guides/deploy/microsoft-azure.mdx
@@ -1,18 +1,18 @@
 ---
-title: Deploy your Hyas Site to Microsoft Azure
-description: How to deploy your Hyas site to the web using Microsoft Azure.
+title: Deploy your Thulite Site to Microsoft Azure
+description: How to deploy your Thulite site to the web using Microsoft Azure.
 type: deploy
 stub: false
 service: Microsoft Azure
 ---
 
-[Azure](https://azure.microsoft.com/) is a cloud platform from Microsoft. You can deploy your Hyas site with Microsoft Azure's [Static Web Apps](https://aka.ms/staticwebapps) service.
+[Azure](https://azure.microsoft.com/) is a cloud platform from Microsoft. You can deploy your Thulite site with Microsoft Azure's [Static Web Apps](https://aka.ms/staticwebapps) service.
 
 :::tip[Looking for an example?]
 Check out the [official Microsoft Azure Doks example project](https://github.com/gethyas/doks-microsoft-azure)!
 :::
 
-This guide takes you through deploying your Hyas site stored in GitHub using Visual Studio Code. Please see Microsoft guides for using an [Azure Pipelines Task](https://learn.microsoft.com/en-us/azure/devops/pipelines/tasks/reference/azure-static-web-app-v0?view=azure-pipelines) for other setups.
+This guide takes you through deploying your Thulite site stored in GitHub using Visual Studio Code. Please see Microsoft guides for using an [Azure Pipelines Task](https://learn.microsoft.com/en-us/azure/devops/pipelines/tasks/reference/azure-static-web-app-v0?view=azure-pipelines) for other setups.
 
 ## Prerequisites
 
@@ -28,12 +28,12 @@ To follow this guide, you will need:
 
 2. Open the Static Web Apps extension, sign in to Azure, and click the **+** button to create a new Static Web App. You will be prompted to designate which subscription key to use.
 
-3. Follow the wizard started by the extension to give your app a name, choose a framework preset, and designate the app root (usually `/`) and built file location (use `/public`). Hyas is not listed in the built-in templates in Azure so you will need to select `custom`. The wizard will run and will create a [GitHub Action](https://github.com/features/actions) in the `.github` folder of your repo. (This folder will be automatically created if it does not already exist.) 
+3. Follow the wizard started by the extension to give your app a name, choose a framework preset, and designate the app root (usually `/`) and built file location (use `/public`). Thulite is not listed in the built-in templates in Azure so you will need to select `custom`. The wizard will run and will create a [GitHub Action](https://github.com/features/actions) in the `.github` folder of your repo. (This folder will be automatically created if it does not already exist.) 
 
 The GitHub Action will deploy your app (you can see its progress in your repo's Actions tab on GitHub). When successfully completed, you can view your app at the address shown in the SWA Extension's progress window by clicking the **Browse Website** button (this will appear after the GitHub Action has run).
 
 ## Known Issues
-The GitHub action yaml that is created for you assumes the use of node 14. This means the Hyas build fails. To resolve this update your projects package.json file with this snippet.
+The GitHub action yaml that is created for you assumes the use of node 14. This means the Thulite build fails. To resolve this update your projects package.json file with this snippet.
 
 ```
   "engines": {
