--- a/src/content/docs/guides/deploy/render.mdx
+++ b/src/content/docs/guides/deploy/render.mdx
@@ -1,12 +1,12 @@
 ---
-title: Deploy your Hyas Site to Render
-description: How to deploy your Hyas site to the web using Render.
+title: Deploy your Thulite Site to Render
+description: How to deploy your Thulite site to the web using Render.
 type: deploy
 stub: false
 service: Render
 ---
 
-You can deploy your Hyas project to [Render](https://render.com/), a service to build websites with free TLS certificates, a global CDN, DDoS protection, private networks, and auto deploys from Git.
+You can deploy your Thulite project to [Render](https://render.com/), a service to build websites with free TLS certificates, a global CDN, DDoS protection, private networks, and auto deploys from Git.
 
 ## How to deploy
 
@@ -16,5 +16,5 @@ You can deploy your Hyas project to [Render](https://render.com/), a service to 
 4. Give your website a name, select the branch and specify the build command and publish directory
    - **build command:** `npm run build`
    - **publish directory:** `public`
-   - **Environment variables (advanced)**: By default, Render uses Node.js 14.17.0, but Hyas [requires a higher version](/install/auto/#prerequisites). Add an environment variable with a **Variable key** of `NODE_VERSION` and a **Value** of `18.14.1` or higher to tell Render to use a compatible Node.js version. Alternatively, add a [`.node-version`](https://render.com/docs/node-version) or [`.nvmrc`](https://render.com/docs/node-version) file to your project to specify a Node.js version.
+   - **Environment variables (advanced)**: By default, Render uses Node.js 14.17.0, but Thulite [requires a higher version](/install/auto/#prerequisites). Add an environment variable with a **Variable key** of `NODE_VERSION` and a **Value** of `18.14.1` or higher to tell Render to use a compatible Node.js version. Alternatively, add a [`.node-version`](https://render.com/docs/node-version) or [`.nvmrc`](https://render.com/docs/node-version) file to your project to specify a Node.js version.
 5. Click the **Create Static Site** button
