--- a/src/content/docs/guides/deploy/vercel.mdx
+++ b/src/content/docs/guides/deploy/vercel.mdx
@@ -1,13 +1,13 @@
 ---
-title: Deploy your Hyas Site to Vercel
-description: How to deploy your Hyas site to the web on Vercel.
+title: Deploy your Thulite Site to Vercel
+description: How to deploy your Thulite site to the web on Vercel.
 type: deploy
 stub: false
 service: Vercel
 ---
 import List from '~/components/List.astro';
 
-You can use [Vercel](http://vercel.com/) to deploy a Hyas site to their global edge network with zero configuration.
+You can use [Vercel](http://vercel.com/) to deploy a Thulite site to their global edge network with zero configuration.
 
 This guide includes instructions for deploying to Vercel through the website UI or Vercel's CLI.
 
@@ -19,7 +19,7 @@ You can deploy to Vercel through the website UI or using Vercel’s CLI (command
 
 1. Push your code to your online Git repository (GitHub, GitLab, BitBucket).
 2. [Import your project](https://vercel.com/new) into Vercel.
-3. Vercel will automatically detect Hyas and configure the right settings.
+3. Vercel will automatically detect Thulite and configure the right settings.
 4. Your application is deployed!
 
 After your project has been imported and deployed, all subsequent pushes to branches will generate [Preview Deployments](https://vercel.com/docs/concepts/deployments/preview-deployments), and all changes made to the Production Branch (commonly “main”) will result in a [Production Deployment](https://vercel.com/docs/concepts/deployments/environments#production).
@@ -36,7 +36,7 @@ After your project has been imported and deployed, all subsequent pushes to bran
     npm install -g vercel && vercel
     ```
 
-2. Vercel will automatically detect Hyas and configure the right settings.
+2. Vercel will automatically detect Thulite and configure the right settings.
 3. When asked `Want to override the settings? [y/N]`, choose `N`.
 4. Your application is deployed!
 
