--- a/src/content/docs/guides/integrations.mdx
+++ b/src/content/docs/guides/integrations.mdx
@@ -5,7 +5,7 @@ description: A guide in my new Starlight docs site.s
 import IntegrationsNav from '~/components/IntegrationsNav.astro';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-**Hyas integrations** add new functionality and behaviors for your project. You can write a custom integration yourself, use an official integration, or use integrations built by the community.
+**Thulite integrations** add new functionality and behaviors for your project. You can write a custom integration yourself, use an official integration, or use integrations built by the community.
 
 Integrations can…
 
@@ -15,7 +15,7 @@ Integrations can…
 
 ## Official Integrations
 
-The following integrations are maintained by Hyas.
+The following integrations are maintained by Thulite.
 
 <IntegrationsNav />
 
@@ -104,10 +104,10 @@ Optionally, remove the configuration settings.
 
 ## Finding More Integrations
 
-You can find integrations developed by the community in the [Hyas Integrations Directory](https://gethyas.com/integrations/). Follow links there for detailed usage and configuration instructions.
+You can find integrations developed by the community in the [Thulite Integrations Directory](https://thulite.io/integrations/). Follow links there for detailed usage and configuration instructions.
 
 ## Building Your Own Integration
 
-Hyas' Integrations are inspired by npm and Hugo, and designed to feel familiar to anyone who has written an npm package or Hugo Module before.
+Thulite' Integrations are inspired by npm and Hugo, and designed to feel familiar to anyone who has written an npm package or Hugo Module before.
 
-Check out the [Build a Hyas Integration](/guides/integrations/) guide to learn what integrations can do and how to write one yourself.
+Check out the [Build a Thulite Integration](/guides/integrations/) guide to learn what integrations can do and how to write one yourself.
