--- a/src/content/docs/guides/themes/bolt.mdx
+++ b/src/content/docs/guides/themes/bolt.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Bolt"
-description: Bolt theme guide for Hyas
+description: Bolt theme guide for Thulite
 type: themes
 stub: false
 service: Bolt
